Update manage.sh